less/thumbnails.less
.thumbnail {
  background-color: #fff;
  border-color: #ccc;
  border-radius: 10px;
  border-width: 2px;
  min-height: 400px;
}

.thumbnail:hover {
  border-color: #0080c8;
}

.thumbnail .divider {
  margin-bottom: 30px;
  margin-top: 30px;
}

.thumbnail h4 {
  margin-top: 30px;
}

